@@ -1,0 +1,19 @@
+<head>
+<title>Hex HTML entities of various lengths</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+</head>
+<body>
+<p>There should be 6 lines below, each with two copies of the same character.</p>
+<ol>
+<li>a&#x61;</li>
+<li>ḁ&#x1e01;</li>
+<li>𐐀&#x10400;</li>
+<li>𐑍&#x01044D;</li>
+<li>𐑎&#x001044e;</li>
+<li>𐑏&#x0001044f;</li>
+</ol>
+</body>
